# Net-Work

./: .env.example  .gitignore  ACR_PRD.md  ARCHITECTURE_MAPPING.md  Makefile  PRD.md  README.md  WALKTHROUGH.md  package.json  personae_par_branche.md  pyproject.toml  sillage_persona_backup_2026-07-09.json  sillage_top_accounts_backup_2026-07-09.json
.claude/: launch.json
agents/: __init__.py  brief.py  bus.py  client.py  mock_agents.py  orchestrator.py  schemas.py  tools.py
agents/charters/: conquest.md  network.md  relationship.md
archive/nextjs-old-start/: package-lock.json
archive/nextjs-old-start/src/agents/: index.ts  (+1 more)
config/: actions.yaml  apis.yaml  fortress.yaml  uplifts.yaml  warmth.yaml
engines/: __init__.py  adjustment_schema.py  allocator.py  content.py  fortress.py  warmth.py
fabric/: __init__.py  cli.py  protocol.py  registry.py  schema.py  sillage_provider.py  store.py
fabric/connectors/: __init__.py  base.py  fullenrich.py  gcal.py  gmail.py  gradium.py  mockcrm.py  notion.py  sillage.py  slack_source.py
fabric/mcp/: __init__.py  serve.py
fixtures/fullenrich/: lookalikes.json  novapay.json
fixtures/gcal/: events.json
fixtures/gmail/: threads.json
fixtures/gradium/: transcripts.json
fixtures/mockcrm/: accounts.json  companies.json  contacts.json  deals.json  sellers.json
fixtures/notion/: pages.json
fixtures/sillage/: insurer_signals.json  insurers.json  signals.json
fixtures/slack/: messages.json
scripts/: ingest.py  seed.py
src/agents/: ClaudeStrategyAgent.ts  NetworkAgent.ts  RelationshipAgent.ts
src/app/: globals.css  layout.tsx
src/data/: mockAccounts.ts  mockCustomers.ts  mockSignals.ts
src/lib/: anthropic.ts  fullenrich.ts  sillage.ts  utils.ts
src/orchestrator/: AgentOrchestrator.ts
src/types/: account.ts  actionPlan.ts  crm.ts  customer.ts  meeting.ts
surfaces/: __init__.py  gamma.py  slack_bot.py  web.py
surfaces/orbit/: book-of-business.html  brief.html  calendar.html  fortress-plan.html  fortress-viz.html  index.html  orbit.css
tests/: conftest.py  test_agents.py  test_brief.py  test_content.py  test_contract_fullenrich.py  test_contract_gcal.py  test_contract_gmail.py  test_contract_gradium.py  test_contract_mockcrm.py  test_contract_notion.py  test_contract_sillage.py  test_contract_slack.py  test_demo.py  test_engines.py  test_store.py
(+10 files in other folders)
