[project]
name = "acr"
version = "0.1.0"
description = "Account Conquest Room: AI-native revenue intelligence platform (Phase 1: Connection Fabric)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "fastmcp>=2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
fabric = "fabric.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fabric", "fabric.connectors", "fabric.mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
